--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar.html
@@ -3,7 +3,7 @@
     <div class="panel panel-default">
       <div class="panel-heading chr_manager_calendar__header">
         <div>
-          <ui-select ng-change="calendar.refresh()" ng-model="calendar.filters.contact">
+          <ui-select ng-change="calendar.refresh('contacts')" ng-model="calendar.filters.contact">
             <ui-select-match placeholder="Staff Member" allow-clear>
               <span ng-bind="$select.selected.display_name"></span>
             </ui-select-match>
@@ -16,7 +16,7 @@
           <select
             ng-options="region.label for region in calendar.regions track by region.id"
             ng-model="calendar.filters.region"
-            ng-change="calendar.refresh()">
+            ng-change="calendar.refresh('contacts')">
             <option value="">Region</option>
           </select>
           <span class="crm_custom-select__arrow"></span>
@@ -25,7 +25,7 @@
           <select
             ng-options="department.label for department in calendar.departments track by department.id"
             ng-model="calendar.filters.department"
-            ng-change="calendar.refresh()">
+            ng-change="calendar.refresh('contacts')">
             <option value="">Department</option>
           </select>
           <span class="crm_custom-select__arrow"></span>
@@ -34,7 +34,7 @@
           <select
             ng-options="levelType.value for levelType in calendar.levelTypes track by levelType.id"
             ng-model="calendar.filters.level_type"
-            ng-change="calendar.refresh()">
+            ng-change="calendar.refresh('contacts')">
             <option value="">Level Type</option>
           </select>
           <span class="crm_custom-select__arrow"></span>
@@ -43,7 +43,7 @@
           <select
             ng-options="location.label for location in calendar.locations track by location.id"
             ng-model="calendar.filters.location"
-            ng-change="calendar.refresh()">
+            ng-change="calendar.refresh('contacts')">
             <option value="">Locations</option>
           </select>
           <span class="crm_custom-select__arrow"></span>
@@ -51,7 +51,7 @@
         <div class="checkbox">
           <label>
             <input type="checkbox"
-              ng-change="calendar.refresh()"
+              ng-change="calendar.refresh('contacts')"
               ng-model="calendar.filters.contacts_with_leaves"> Show only those who are taking leave
           </label>
         </div>
@@ -73,7 +73,7 @@
               <select
                 ng-options="period as calendar.labelPeriod(period) for period in calendar.absencePeriods track by period.id"
                 ng-model="calendar.selectedPeriod"
-                ng-change="calendar.changeSelectedPeriod()">
+                ng-change="calendar.refresh('period')">
               </select>
               <span class="crm_custom-select__arrow"></span>
             </div>
