--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="chr_leave-calendar__items" ng-repeat="contact in calendar.filterContacts() track by contact.id">
+          <tr class="chr_leave-calendar__items" ng-repeat="contact in calendar.filterContacts() | limitTo:calendar.pageSize:month.currentPage * calendar.pageSize">
             <td class="chr_leave-calendar__name">{{contact.display_name}}</td>
             <td ng-repeat="day in month.days track by day.date">
               <div class="chr_leave-calendar__item"
@@ -48,6 +48,14 @@
           </tr>
         </tbody>
       </table>
+      <div class="chr_leave-calendar__pagination text-center" ng-if="calendar.filterContacts().length > calendar.pageSize">
+        <button class="btn-link" ng-disabled="month.currentPage == 0" ng-click="month.currentPage = (month.currentPage - 1)">
+          <i class="fa fa-lg fa-arrow-left"></i>
+        </button>
+        <button class="btn-link" ng-disabled="month.currentPage >= calendar.filterContacts().length / calendar.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
+          <i class="fa fa-lg fa-arrow-right"></i>
+        </button>
+      </div>
     </div>
   </div>
 </crm-loading>
