--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
@@ -29,7 +29,7 @@
     <crm-loading show="!calendar.loading.calendar">
       <section class="panel panel-default" ng-repeat="month in calendar.months track by $index">
         <ng-include
-          ng-hide="(calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(month.index) === -1)"
+          ng-if="(calendar.selectedMonths.length == 0 || calendar.selectedMonths.indexOf(month.index) > -1)"
           src="$root.sharedPathTpl + 'components/staff-leave-calendar-month.html'"></ng-include>
       </section>
     </crm-loading>
