PCHR-2240: Create leave-calendar-legend component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar.html
@@ -88,104 +88,6 @@
           src="$root.sharedPathTpl + 'components/manager-leave-calendar-month.html'"></ng-include>
       </section>
     </crm-loading>
-    <section class="panel panel-default" ng-class="{ 'is-collapsed': calendar.legendCollapsed }">
-      <header class="panel-heading panel-heading-plain">
-        <h2 class="panel-title" role="button" ng-click="calendar.legendCollapsed = !calendar.legendCollapsed">
-          <i
-            class="fa"
-            aria-hidden="true"
-            ng-class="{ 'fa-chevron-right': calendar.legendCollapsed, ' fa-chevron-down': !calendar.legendCollapsed }"></i>
-          Legend
-        </h2>
-      </header>
-      <div class="panel-collapse" uib-collapse="calendar.legendCollapsed">
-        <div class="panel-body chr_leave-calendar__legend" ng-show="!calendar.legendCollapsed">
-          <div class="row" ng-repeat-start="absenceType in calendar.absenceTypes">
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"></div>
-                <span class="chr_leave-calendar__legend__label">{{absenceType.title}}</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>AM</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">{{absenceType.title}} AM Only</span>
-              </div>
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>PM</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">{{absenceType.title}} PM Only</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"></div>
-                <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}}</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>AM</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} AM</span>
-              </div>
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-                     ng-style="calendar.getAbsenceTypeStyle(absenceType)"><span>PM</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} PM</span>
-              </div>
-            </div>
-          </div>
-          <div class="row" ng-repeat-end ng-if="absenceType.allow_accruals_request == 1">
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--alt"
-                     ng-style="{borderColor: absenceType.color}">
-                  <span>AT</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">Accrued TOIL</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--alt chr_leave-calendar__item--toil-requested"
-                     ng-style="{borderColor: absenceType.color}">
-                  <span>AT</span>
-                </div>
-                <span class="chr_leave-calendar__legend__label">Requested Accrued TOIL</span>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--type--weekend"></div>
-                <span class="chr_leave-calendar__legend__label">Weekend</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--type--public-holiday"></div>
-                <span class="chr_leave-calendar__legend__label">Public Holiday</span>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div class="chr_leave-calendar__item chr_leave-calendar__item--type--non-working"></div>
-                <span class="chr_leave-calendar__legend__label">Non Working Day</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <leave-calendar-legend absence-types="calendar.absenceTypes" ng-if="calendar.absenceTypes.length"></leave-calendar-legend>
   </crm-loading>
 </section>
