PCHR-2240: Create leave-calendar-day component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -36,6 +36,11 @@ $chr-leave-calendar-legend-size:                  20px;
     height: $chr-leave-calendar-cell-height;
     padding: 0 !important;
   }
+
+  leave-calendar-day {
+    display: block;
+    height: 100%;
+  }
 }
 
 th.chr_leave-calendar__name,
