--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
@@ -4,11 +4,11 @@
 <crm-loading show="!month.loading">
   <div class="chr_leave-calendar__month-body">
     <div class="table-responsive">
-      <div class="text-center" ng-show="calendar.filterContacts().length === 0">
+      <div class="text-center" ng-show="calendar.contacts.length === 0">
         Sorry No Contacts
       </div>
       <table
-        ng-hide="calendar.filterContacts().length === 0"
+        ng-hide="calendar.contacts.length === 0"
         class="table table-bordered chr_leave-calendar">
         <thead>
           <tr class="chr_leave-calendar__days">
@@ -20,7 +20,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="chr_leave-calendar__items" ng-repeat="contact in calendar.filterContacts() | limitTo:calendar.pageSize:month.currentPage * calendar.pageSize">
+          <tr class="chr_leave-calendar__items" ng-repeat="contact in calendar.contacts | limitTo:calendar.pageSize:month.currentPage * calendar.pageSize">
             <td class="chr_leave-calendar__name">{{contact.display_name}}</td>
             <td ng-repeat="day in month.days track by day.date">
               <leave-calendar-day contact-data="day.contactsData[contact.id]"></leave-calendar-day>
@@ -28,11 +28,11 @@
           </tr>
         </tbody>
       </table>
-      <div class="chr_leave-calendar__pagination text-center" ng-if="calendar.filterContacts().length > calendar.pageSize">
+      <div class="chr_leave-calendar__pagination text-center" ng-if="calendar.contacts.length > calendar.pageSize">
         <button class="btn-link" ng-disabled="month.currentPage == 0" ng-click="month.currentPage = (month.currentPage - 1)">
           <i class="fa fa-lg fa-arrow-left"></i>
         </button>
-        <button class="btn-link" ng-disabled="month.currentPage >= calendar.filterContacts().length / calendar.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
+        <button class="btn-link" ng-disabled="month.currentPage >= calendar.contacts.length / calendar.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
           <i class="fa fa-lg fa-arrow-right"></i>
         </button>
       </div>
