--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
@@ -3,7 +3,7 @@
     <div class="panel panel-default">
       <div ng-if="calendar.showFilters" class="panel-heading chr_manager_calendar__header">
         <div>
-          <ui-select ng-change="calendar.refresh('contacts')" ng-model="calendar.filters.contact">
+          <ui-select ng-change="calendar.refresh('contacts')" ng-model="calendar.filters.userSettings.contact">
             <ui-select-match placeholder="Staff Member" allow-clear>
               <span ng-bind="$select.selected.display_name"></span>
             </ui-select-match>
@@ -14,8 +14,8 @@
         </div>
         <div class="crm_custom-select">
           <select
-            ng-options="region.label for region in calendar.regions track by region.id"
-            ng-model="calendar.filters.region"
+            ng-options="region.label for region in calendar.filters.optionValues.regions track by region.id"
+            ng-model="calendar.filters.userSettings.region"
             ng-change="calendar.refresh('contacts')">
             <option value="">Region</option>
           </select>
@@ -23,8 +23,8 @@
         </div>
         <div class="crm_custom-select">
           <select
-            ng-options="department.label for department in calendar.departments track by department.id"
-            ng-model="calendar.filters.department"
+            ng-options="department.label for department in calendar.filters.optionValues.departments track by department.id"
+            ng-model="calendar.filters.userSettings.department"
             ng-change="calendar.refresh('contacts')">
             <option value="">Department</option>
           </select>
@@ -32,8 +32,8 @@
         </div>
         <div class="crm_custom-select">
           <select
-            ng-options="levelType.value for levelType in calendar.levelTypes track by levelType.id"
-            ng-model="calendar.filters.level_type"
+            ng-options="levelType.value for levelType in calendar.filters.optionValues.levelTypes track by levelType.id"
+            ng-model="calendar.filters.userSettings.level_type"
             ng-change="calendar.refresh('contacts')">
             <option value="">Level Type</option>
           </select>
@@ -41,8 +41,8 @@
         </div>
         <div class="crm_custom-select">
           <select
-            ng-options="location.label for location in calendar.locations track by location.id"
-            ng-model="calendar.filters.location"
+            ng-options="location.label for location in calendar.filters.optionValues.locations track by location.id"
+            ng-model="calendar.filters.userSettings.location"
             ng-change="calendar.refresh('contacts')">
             <option value="">Locations</option>
           </select>
@@ -52,7 +52,7 @@
           <label>
             <input type="checkbox"
               ng-change="calendar.refresh('contacts')"
-              ng-model="calendar.filters.contacts_with_leaves"> Show only those who are taking leave
+              ng-model="calendar.filters.userSettings.contacts_with_leaves"> Show only those who are taking leave
           </label>
         </div>
       </div>
