--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup.html
@@ -61,7 +61,7 @@
               <leave-request-popup-comments-tab request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-comments-tab>
             </uib-tab>
             <uib-tab heading="Files">
-              <leave-request-popup-files-tab request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-files-tab>
+              <leave-request-popup-files-tab request="$ctrl.request" file-uploader="$ctrl.fileUploader" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-files-tab>
             </uib-tab>
           </uib-tabset>
         </div>
