--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
@@ -61,10 +61,10 @@
           <div class="col-sm-8">
             <ui-select multiple ng-model="calendar.selectedMonths">
               <ui-select-match placeholder="Select Months">
-                <span>{{$item.name.short}}</span>
+                <span>{{$item.name}}</span>
               </ui-select-match>
               <ui-select-choices repeat="month.index as month in (calendar.months | filter: $select.search)">
-                <span>{{month.name.short}}</span>
+                <span>{{month.name}}</span>
               </ui-select-choices>
             </ui-select>
           </div>
